--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -36,23 +36,27 @@ Además agregá una sección más donde expliques por qué estás estudiando est
 
         <div class="rightcolumn">
             <div class="card">
-                <h2>About Me</h2>
+                
                 <div class="foto">
                     <img src="../img/blanco y negro mate.jpg" alt="fotoCV">
                 </div>
+                <h2>About Me</h2>
                 <p>En la programacion encontre una actividad de ciencia exacta pero a la vez creativa, que puede proporcionarte sustento y calidad de vida. Asi que cuando lo ví claro decidí ir a por todo. Empece por inscribirme en la facu de informatica, y con el programa Henry quiero acelerar el cambio definitivo de actividad laboral.  </p>
               </div>
               <div class="card">
-                <h3>Hobbies</h3>
-                <div class="fakeimg"><p>Dibujo un poco.. es muy relajante</p></div>
-                <div class="fakeimg"><p>Tocar el saxo, flauta o guitarra, aunque sean melodias sencillas</p></div>
+                <h2>Hobbies</h2>
+                <div class="fakeimg"><p>Dibujo un poco.. es muy relajante</p></div><br>
+                <div class="fakeimg"><p>Tocar el saxo, flauta o guitarra, aunque sean melodias sencillas</p></div><br>
                 <div class="fakeimg"><p>Hacer jardineria</p></div>
               </div>
               <div class="card">
-                <h3>Contact Me!</h3>
-                <p>Tel: (221) 497-1987</p>
-                <p>Lizen777@gmail.com</p>
-                <p>Calle 64 nro 960, La Plata</p>
+                <h2>Contact Me!</h2>
+                <p>Tel: (221) 497-1987</p><br>
+                <p>Lizen777@gmail.com</p><br>
+                <p>Calle 64 nro 960, La Plata</p><br>
+                <p>GitHub: <a href="https://github.com/Laura87-web" target="_blank">Laura87-web</a></p><br>
+                <p>Linkedin :<a href="https://www.linkedin.com/in/laura-wenli-chu-a67b6217a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Be3J7G3SCSnKmp6fjphT9VA%3D%3D" target="_blank">Mi perfil</a></p>
+            
               </div>
         </div>
 
@@ -117,7 +121,7 @@ Además agregá una sección más donde expliques por qué estás estudiando est
                 <h2>Emprendimiento comercial: Pizzeria <span class="Año">2015-2018</span></h2>
                 <h5>Calle 23 esq 58, La Plata</h5><br>
                 <p>
-                    Actividades: Atención al cliente personal y telefónicamente, manejo de caja, control de stock, fotografía de productos. Diseño de marca y volante publicitario
+                    Actividades: Atención al cliente personal y telefónicamente, manejo de caja, control de stock, fotografía de productos. Diseño de marca y <a href="../img/volanteKrun.jpg"> volante publicitario</a>
                 </p>
             </div>
         </div>
